#![feature(const_unsafe_cell_new)]
#![feature(const_atomic_usize_new)]

[package]
name = "learnnet"
version = "0.1.0"
authors = ["stevenpack <steven.pack.code@gmail.com>"]

[features]
mining-tests = []
integration = []

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
chrono = "0.4"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
log = "0.3.8"
env_logger = "0.4.3"
sha2 = "0.6.0"
base64 = "0.7.0"
url = "1.5.1"
reqwest = "0.8.0"
clap = "2.26.2"